# rust-windows-api-spielerein

./: Readme.md
dll_injection/: Cargo.toml  rust-toolchain.toml
dll_injection/src/: lib.rs  main.rs
process_creation_ho1/: Cargo.toml
process_creation_ho1/src/: main.rs
process_injection/: Cargo.toml
process_injection/src/: main.rs
