[package]
name = "dll_injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="inject_me"
path="src/main.rs"
[lib]
name = "inject"
path="src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2.2"
dll-syringe = "0.14.0"
CreateProcessW = "0.1.0"

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
